Noissue. Small layout bugs fix

--- a/src/assets/sass/sources/project/ui/_filters.scss
+++ b/src/assets/sass/sources/project/ui/_filters.scss
@@ -63,6 +63,6 @@ $element-base-color: $color-general;
   }
 
   @include resolution_smartphone-and-tablet {
-    max-width: 120px;
+    max-width: 90px;
   }
 }
